Add home module to  separate every componet with its on  module

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="public/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/app.routes.js"></script>
+  <script src="app/home/home.module.js"></script>
   <script src="app/home/home.controller.js"></script>
   </body>
 </html>
