Add router  and  api

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <script src="public/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/app.routes.js"></script>
+  <script src="app/common/common.module.js"></script>
+  <script src="app/common/urlHelper.service.js"></script>
+  <script src="app/common/dataServiceHelper.js"></script>
   <script src="app/home/home.module.js"></script>
   <script src="app/home/home.controller.js"></script>
+  <script src="app/home/home.service.js"></script>
   </body>
 </html>
