Fixing link miss in index page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="client/app/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="client/app/css/font-awesome.min.css">
 	<link rel="stylesheet" href="client/app/css/font-awesome.css">
-	<link rel="stylesheet" href="client/appcss/animate.css">
-	<link href="css/style.css" rel="stylesheet" />	
+	<link rel="stylesheet" href="client/app/css/animate.css">
+	<link href="client/app/css/style.css" rel="stylesheet" />	
 <!-- =======================================================
     Theme Name: Anyar
     Theme URL: https://bootstrapmade.com/anyar-free-multipurpose-one-page-bootstrap-theme/
@@ -130,14 +130,14 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="client/app/js/jquery.js"></script>	
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="client/public/app/js/bootstrap.min.js"></script>
+  <script src="client/public/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="client/public/app/js/wow.min.js"></script>
-	<script src="client/public/app/js/jquery.easing.min.js"></script>	
-	<script src="client/public/app/js/jquery.isotope.min.js"></script> 
-	<script src="client/public/app/js/functions.js"></script>
+	<script src="client/app/js/wow.min.js"></script>
+	<script src="client/app/js/jquery.easing.min.js"></script>	
+	<script src="client/app/js/jquery.isotope.min.js"></script> 
+	<script src="client/app/js/functions.js"></script>
   <script src="client/public/angular/angular.min.js"></script>
-  <script src="client/public/lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="client/public/angular-ui-router/angular-ui-router.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/app.routes.js"></script>
   <script src="app/common/common.module.js"></script>
