add image and gulp task

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -12,13 +12,13 @@
 
 						<div class="carousel-inner">
 							<div class="item active">
-								<img src="client/app/img/3.jpg" class="img-responsive" alt=""> 
+								<img src="client/app/img/tanzania2.jpg" class="img-responsive" alt=""> 
 						   </div>
 						   <div class="item">
-								<img src="client/app/img/3.jpg" class="img-responsive" alt=""> 
+								<img src="client/app/img/tanzania4.jpg" class="img-responsive" alt=""> 
 						   </div> 
 						   <div class="item">
-								<img src="client/app/img/3.jpg" class="img-responsive" alt=""> 
+								<img src="client/app/img/tanzania3.jpg" class="img-responsive" alt=""> 
 						   </div> 
 						</div>
 						
@@ -93,6 +93,9 @@
                                         <div class="media-body">
                                              <h4>Adipisicing elit</h4>
                                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+																						 <p ng-repeat="user in vm.ListUser">
+																							 {{user.title}}
+																						 </p>
                                         </div>
                                   </div>
                               </div>
