--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Anyar-HTML Bootstrap theme</title>
+    <title>Watanzania leo | News and Opions</title>
 
     <!-- Bootstrap -->
     <link href="client/app/css/bootstrap.min.css" rel="stylesheet">
@@ -32,17 +32,20 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="index.html"><h1>Anyar</h1></a>
+							<a href="index.html"><h1>WaTanzania Leo</h1></a>
 						</div>
 					</div>
 					
 					<div class="navbar-collapse collapse">							
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
-								<li role="presentation"><a href="#home" class="active">Home</a></li>
-								<li role="presentation"><a href="#about">About Us</a></li>
-								<li role="presentation"><a href="#services">Services</a></li>																
-								<li role="presentation"><a href="#contact">Contact</a></li>						
+								<li role="presentation"><a href="#home" class="active">politics</a></li>
+								<li role="presentation"><a href="#about">opinion</a></li>
+								<li role="presentation"><a href="#services">sport</a></li>																
+								<li role="presentation"><a href="#contact">lifestyle</a></li>
+								<li role="presentation"><a href="#services">fashion</a></li>																
+								<li role="presentation"><a href="#contact">travel</a></li>
+								<li role="presentation"><a href="#contact">Admin</a></li>						
 							</ul>
 						</div>
 					</div>						
@@ -132,19 +135,19 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="client/public/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="client/app/js/wow.min.js"></script>
-	<script src="client/app/js/jquery.easing.min.js"></script>	
-	<script src="client/app/js/jquery.isotope.min.js"></script> 
-	<script src="client/app/js/functions.js"></script>
+ <script src="client/app/js/wow.min.js"></script>
+  <script src="client/app/js/jquery.easing.min.js"></script>	
+  <script src="client/app/js/jquery.isotope.min.js"></script> 
+  <script src="client/app/js/functions.min.js"></script>
   <script src="client/public/angular/angular.min.js"></script>
   <script src="client/public/angular-ui-router/angular-ui-router.min.js"></script>
-  <script src="app/app.js"></script>
-  <script src="app/app.routes.js"></script>
-  <script src="app/common/common.module.js"></script>
-  <script src="app/common/urlHelper.service.js"></script>
-  <script src="app/common/dataServiceHelper.js"></script>
-  <script src="app/home/home.module.js"></script>
-  <script src="app/home/home.controller.js"></script>
-  <script src="app/home/home.service.js"></script>    
+  <script src="app/app.min.js"></script>
+  <script src="app/app.routes.min.js"></script>
+  <script src="app/common/common.module.min.js"></script>
+  <script src="app/common/urlHelper.service.min.js"></script>
+  <script src="app/common/dataServiceHelper.min.js"></script>
+  <script src="app/home/home.module.min.js"></script>
+  <script src="app/home/home.controller.min.js"></script>
+  <script src="app/home/home.service.min.js"></script>    
 </body>
 </html>
