use gulp to clean your build

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -36,9 +36,8 @@
 		<div class="container">
 			<div class="center">
 				<div class="col-md-6 col-md-offset-3">
-					<h2>About Us</h2>
+					<h2>{{vm.title}}</h2>
 					<hr>					
-					<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
 				</div>
 			</div>
 		</div>
@@ -46,25 +45,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">						
-					<div class="progress progress-striped active">
-					  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-						40% - eCommerce
-					  </div>
+					<div class="progress-striped active">
+					   <h3>Working </h3>
+					   <p>Working progress design</p>
 					</div>
-					<div class="progress progress-striped active">
-					  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-						20% - Ruby
-					  </div>
+					<div class="progress-striped active">
+					 <h3>Working </h3>
+					   <p>Working progress design</p>
 					</div>
-					<div class="progress progress-striped active">
-					  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-						60% - User interface
-					  </div>
+					<div class="progress-striped active">
+					 <h3>Working </h3>
+					   <p>Working progress design</p>
 					</div>
-					<div class="progress progress-striped active">
-					  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-						80% - WordPress
-					  </div>
+					<div class="progress-striped active">
+					 <h3>Working </h3>
+					   <p>Working progress design</p>
 					</div>
                 </div><!--/.col-sm-6-->
 
