--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!-- Bootstrap -->
     <link href="client/app/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="client/app/css/font-awesome.min.css">
-	<link rel="stylesheet" href="client/app/css/font-awesome.css">
-	<link rel="stylesheet" href="client/app/css/animate.css">
+	<link rel="stylesheet" href="client/app/css/animate.min.css">
 	<link href="client/app/css/style.css" rel="stylesheet" />	
 <!-- =======================================================
     Theme Name: Anyar
@@ -131,7 +130,7 @@
 		</div>				
 	</div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="client/app/js/jquery.js"></script>	
+	<script src="client/app/js/jquery-2.1.1.min.js"></script>	
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="client/public/bootstrap/js/bootstrap.min.js"></script>
   <script src="https://maps.google.com/maps/api/js?sensor=true"></script>
